--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/events_db
 spring.datasource.username=root
 spring.datasource.password=Root12345!
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=ekeszler77@gmail.com
-spring.mail.password=astaeparola
+spring.mail.password=bfhp fmql mjlj uyko
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.org.springframework.security=DEBUG
