--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/events_db
 spring.datasource.username=root
 spring.datasource.password=Root12345!
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=ekeszler77@gmail.com
