--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
 movie.api.key=ea1e21bf
 
-spring.datasource.url=jdbc:mysql://localhost:3306/cinemaapp_db
+spring.datasource.url=jdbc:mysql://localhost:3306/events_db
 spring.datasource.username=root
 spring.datasource.password=Root12345!
 spring.jpa.hibernate.ddl-auto=update
